Prevent adding too much padding if no pinned comments present (including translation comments)

--- a/frontend/src/core/comments/components/Comment.css
+++ b/frontend/src/core/comments/components/Comment.css
@@ -2,10 +2,6 @@
     padding-bottom: 10px;
 }
 
-.comments-list ul.comments li.comment:first-child {
-    padding-top: 10px;
-}
-
 .comments-list .comment a {
     color: #7bc876;
     font-weight: 400;
